--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,74 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="10dp"
-    android:paddingTop="10dp"
-    android:paddingRight="10dp"
-    tools:context=".MenuActivity"
-    tools:ignore="Deprecated">
+    tools:context=".MenuActivity">
 
     <Button
-        android:id="@+id/assigncase"
-        android:layout_width="wrap_content"
+        android:id="@+id/addDetective"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_x="25dp"
-        android:layout_y="44dp"
-        android:width="300dp"
-        android:text="Assign Case"
-        android:textSize="25sp"
-        android:textStyle="italic|bold"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/addadmin"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="25dp"
-        android:layout_y="172dp"
-        android:width="300dp"
-        android:text=" Add Admin"
-        android:textSize="25sp"
-        android:textStyle="italic|bold"
-        tools:ignore="MissingConstraints" />
-
-    <Button
-        android:id="@+id/adddetective"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="25dp"
-        android:layout_y="294dp"
-        android:width="300dp"
+        android:layout_marginTop="96dp"
         android:text="Add Detective"
-        android:textSize="25sp"
-        android:textStyle="italic|bold"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/detective_details"
-        android:layout_width="wrap_content"
+        android:id="@+id/addAdmin"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_x="25dp"
-        android:layout_y="420dp"
-        android:width="300dp"
+        android:layout_marginTop="30dp"
+        android:text="ADD ADMIIN"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addDetective" />
+
+    <Button
+        android:id="@+id/assignCase"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="ASSIGN CASE"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addAdmin" />
+
+    <Button
+        android:id="@+id/dectDetails"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
         android:text="Detective Details"
-        android:textSize="25sp"
-        android:textStyle="italic|bold"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/assignCase" />
 
     <Button
-        android:id="@+id/case_details"
-        android:layout_width="wrap_content"
+        android:id="@+id/caseDetails"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_x="25dp"
-        android:layout_y="549dp"
-        android:width="300dp"
+        android:layout_marginTop="30dp"
         android:text="Case Details"
-        android:textSize="25sp"
-        android:textStyle="italic|bold"
-        tools:ignore="MissingConstraints" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/dectDetails" />
 
-
-</AbsoluteLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
