--- a/app/src/main/res/layout/activity_complaint_registration.xml
+++ b/app/src/main/res/layout/activity_complaint_registration.xml
@@ -1,42 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ComplaintRegistration"
-    android:background="@drawable/pinterest">
-
+    android:background="@drawable/pinterest"
+    >
     <Button
         android:id="@+id/filecomplaint"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_x="98dp"
-        android:layout_y="119dp"
-        android:width="200dp"
-        android:text="File a Complaint"
-        android:textSize="25sp"
-        android:textStyle="italic|bold" />
+        android:layout_marginTop="96dp"
+        android:text="File A Compliant"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/complaintstatus"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_x="98dp"
-        android:layout_y="238dp"
-        android:width="200dp"
-        android:text="Complaint Status"
-        android:textSize="25sp"
-        android:textStyle="italic|bold" />
+        android:layout_marginTop="30dp"
+        android:text="Check Status"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/filecomplaint" />
 
     <Button
         android:id="@+id/logout"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_x="98dp"
-        android:layout_y="352dp"
-        android:width="200dp"
-        android:text="Logout"
-        android:textSize="25sp"
-        android:textStyle="italic|bold" />
-</AbsoluteLayout>
+        android:layout_marginTop="30dp"
+        android:text="logout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/complaintstatus" />
+
+    <Button
+        android:id="@+id/others"
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="30dp"
+        android:text="Other Functionalities "
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logout" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
