--- a/app/src/main/res/layout/activity_fail_complaint.xml
+++ b/app/src/main/res/layout/activity_fail_complaint.xml
@@ -1,190 +1,166 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@drawable/pinterest"
-    tools:context=".FailComplaint">
+    android:layout_height="match_parent">
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scrollY="10dp"
+        android:verticalScrollbarPosition="defaultPosition"
+
+        tools:context=".FailComplaint">
+        <TextView
+            android:id="@+id/complainttype"
+            android:layout_width="137dp"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:text="Complaint Type:"
+            app:layout_constraintBottom_toTopOf="@+id/complaintname"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.204"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
+        <Spinner
+            android:id="@+id/spinner"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
+            android:layout_x="199dp"
+            android:layout_y="105dp"
+            android:dropDownWidth="150dp"
+            android:spinnerMode="dropdown"
+            app:layout_constraintBottom_toTopOf="@+id/complaintname"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.82"
+            app:layout_constraintStart_toEndOf="@+id/complainttype"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0" />
+        <EditText
+            android:id="@+id/complaintname"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="120dp"
+            android:ems="10"
+            android:hint="Enter complaint name"
+            android:inputType="textPersonName"
+            app:layout_constraintBottom_toTopOf="@+id/convictname2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.449"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="0.82" />
+
+        <EditText
+            android:id="@+id/convictname2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:ems="10"
+            android:hint="Enter convict name"
+            android:inputType="textPersonName"
+            app:layout_constraintBottom_toTopOf="@+id/victimname2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.449"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/complaintname" />
+
+        <EditText
+            android:id="@+id/victimname2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:ems="10"
+            android:hint="Enter Victim Name"
+            android:inputType="textPersonName"
+            app:layout_constraintBottom_toTopOf="@+id/mobileno2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.44"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/convictname2" />
+
+        <EditText
+            android:id="@+id/place2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            android:ems="10"
+            android:hint="Enter Place Name"
+            android:inputType="textPersonName"
+            app:layout_constraintBottom_toTopOf="@+id/date2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.439"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/mobileno2" />
+
+        <EditText
+            android:id="@+id/date2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="89dp"
+            android:layout_marginLeft="89dp"
+            android:layout_marginTop="28dp"
+            android:layout_marginEnd="109dp"
+            android:layout_marginRight="109dp"
+            android:layout_marginBottom="7dp"
+            android:ems="10"
+            android:hint="Enter Date"
+            android:inputType="date"
+            app:layout_constraintBottom_toTopOf="@+id/time2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/place2"
+            app:layout_constraintVertical_bias="1.0" />
+
+        <EditText
+            android:id="@+id/time2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:ems="10"
+            android:hint="Enter Time"
+            android:inputType="time"
+            app:layout_constraintBottom_toTopOf="@+id/registercomplaint"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.439"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/date2" />
 
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="22dp"
-        android:layout_y="27dp"
-        android:text="Enter Details of the complaint:"
-        android:textSize="25sp"
-        android:textStyle="bold|italic" />
 
-    <TextView
-        android:id="@+id/complaintname1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="22dp"
-        android:layout_y="325dp"
-        android:text="ComplaintName"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <EditText
-        android:id="@+id/complaintname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="214dp"
-        android:layout_y="319dp"
-        android:width="150dp"
-        android:ems="10"
-        android:inputType="textPersonName" />
-
-    <TextView
-        android:id="@+id/complainttype1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="20dp"
-        android:layout_y="105dp"
-        android:text="ComplaintType"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/place1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="22dp"
-        android:layout_y="391dp"
-        android:text="Place of Incident"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/date1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="27dp"
-        android:layout_y="453dp"
-        android:text="Date"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/time1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="28dp"
-        android:layout_y="523dp"
-        android:text="Time"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/victimname1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="22dp"
-        android:layout_y="157dp"
-        android:text="Victim Name"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/mobileno1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="21dp"
-        android:layout_y="265dp"
-        android:text="MobileNo"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <TextView
-        android:id="@+id/convictname"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="21dp"
-        android:layout_y="212dp"
-        android:text="Convict Name"
-        android:textSize="20sp"
-        android:textStyle="bold" />
-
-    <EditText
-        android:id="@+id/convictname2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="199dp"
-        android:layout_y="203dp"
-        android:width="150dp"
-        android:ems="10"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/mobileno2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="199dp"
-        android:layout_y="258dp"
-        android:width="150dp"
-        android:ems="10"
-        android:inputType="phone" />
-
-    <EditText
-        android:id="@+id/victimname2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="197dp"
-        android:layout_y="144dp"
-        android:width="150dp"
-        android:ems="10"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/place2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="229dp"
-        android:layout_y="383dp"
-        android:width="150dp"
-        android:ems="10"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/date2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="197dp"
-        android:layout_y="445dp"
-        android:width="150dp"
-        android:ems="10"
-        android:inputType="date" />
-
-    <EditText
-        android:id="@+id/time2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="199dp"
-        android:layout_y="509dp"
-        android:width="150dp"
-        android:ems="10"
-        android:inputType="time" />
-
-    <Button
-        android:id="@+id/next"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="115dp"
-        android:layout_y="618dp"
-        android:width="150dp"
-        android:text="Next" />
-
-    <Spinner
-        android:id="@+id/spinner"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_x="199dp"
-        android:layout_y="105dp"
-        android:dropDownWidth="150dp"
-        android:spinnerMode="dropdown" />
+        <Button
+            android:id="@+id/registercomplaint"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="143dp"
+            android:layout_marginLeft="143dp"
+            android:layout_marginTop="68dp"
+            android:layout_marginEnd="180dp"
+            android:layout_marginRight="180dp"
+            android:layout_marginBottom="10dp"
+            android:width="150dp"
+            android:text="Register"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.419"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/time2" />
+        <EditText
+            android:id="@+id/mobileno2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
+            android:ems="10"
+            android:hint="Enter Mobile No"
+            android:inputType="phone"
+            app:layout_constraintBottom_toTopOf="@+id/place2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.439"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/victimname2" />
 
 
-</AbsoluteLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
