--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,42 +1,41 @@
 <?xml version="1.0" encoding="utf-8"?>
-<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/pinterest"
-    tools:context=".MainActivity">
-
+    tools:context=".MainActivity"
+    android:background="@drawable/pinterest">
     <Button
         android:id="@+id/citizen"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_x="121dp"
-        android:layout_y="150dp"
-        android:width="150dp"
-        android:text="Citizen"
-        android:textSize="25sp"
-        android:textStyle="italic|bold" />
+        android:layout_marginTop="96dp"
+        android:text="CITIZEN"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textStyle="italic|bold"/>
 
     <Button
         android:id="@+id/admin"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_x="125dp"
-        android:layout_y="243dp"
-        android:width="150dp"
-        android:text="Admin"
-        android:textSize="25sp"
-        android:textStyle="italic|bold" />
+        android:layout_marginTop="30dp"
+        android:text="ADMIN"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/citizen"
+        android:textStyle="italic|bold"/>
 
     <Button
         android:id="@+id/detective"
-        android:layout_width="wrap_content"
+        android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_x="128dp"
-        android:layout_y="338dp"
-        android:width="150dp"
-        android:text="Detective"
-        android:textSize="25sp"
-        android:textStyle="italic|bold" />
-</AbsoluteLayout>
+        android:layout_marginTop="30dp"
+        android:text="DETECTIVE"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/admin"
+        android:textStyle="italic|bold"/>
+</androidx.constraintlayout.widget.ConstraintLayout>
